Add java.scripting module and add -Ptest to Java 11 run